--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/Levels/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Bleuprints/GameModes/LD49_GameMode_BP.LD49_GameMode_BP_C
 GlobalDefaultServerGameMode=None
