--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -154,3 +154,7 @@ VisualizeCalibrationGrayscaleMaterialPath=None
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="LD49GameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="LD49Character")
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
