--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,3 +4,6 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=25B2291541D7FEE9EA16B79068B73B14
+ProjectName=Unstable Chameleon
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "5E1011DF4BDFFA2A4A87E1ABE5592A1F", "Unstable Chameleon")
+
